--- a/Test02/Views/PhongKho/TaoPhieuXuatKho.cshtml
+++ b/Test02/Views/PhongKho/TaoPhieuXuatKho.cshtml
@@ -13,7 +13,7 @@
             <label for="date">Ngày:</label>
             <input type="date" id="clock" class="date" name="ngay"><br>
             <label for="number">Mã số:</label>
-            <input type="number" id="number" name="maso"> <br>
+            <input type="text" id="number" name="maso"> <br>
         </form>
         <form class="row">
             <div class="form-group col-md-12">
@@ -21,7 +21,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="form-group col-md-12">
-                <label class="control-label">Theo hóa đơn số: </label>
+                <label class="control-label">Mã hóa đơn bán hàng: </label>
                 <input class="form-control" type="text" required>
             </div>
             <div class="form-group col-md-12">
