Update function search_PhongKho 12pm 28/11

--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -127,7 +127,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <script src="src/jquery.table2excel.js"></script>
+    @*<script src="src/jquery.table2excel.js"></script>*@
 
     <script type="text/javascript" src="~/Scripts/jquery.dataTables.min.js"></script>
 
