--- a/Test02/Views/KeToan/QLCongno.cshtml
+++ b/Test02/Views/KeToan/QLCongno.cshtml
@@ -1,9 +1,12 @@
-﻿
+﻿@model IEnumerable<Test02.Models.PhieuCongNo>
+@using Test02.Models;
 @{
     ViewBag.Title = "QLCongno";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.cn = "active";
     ViewBag.nd = "Danh sách Công nợ";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    List<HoaDon> ctdh = db.HoaDons.ToList();
 }
 
 <div class="row">
@@ -13,11 +16,11 @@
 
                 <div class="row element-button">
                     <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KeToan/CreateCongno"><i class="fas fa-file-upload"></i> Thêm phiếu công nợ</a>
+                        <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KeToan/TaoCongno "><i class="fas fa-file-upload"></i> Thêm phiếu công nợ</a>
                     </div>
                     @*<div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
-                    </div>*@
+                            <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
+                        </div>*@
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
                             <i class="fas fa-print"></i> In dữ liệu
@@ -26,87 +29,78 @@
 
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                 
-                        <div class="col-md-1">
-                            <div id="sampleTable_filter" class="dataTables_filter">
-                                <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
-                            </div>
+
+                    <div class="col-md-1">
+                        <div id="sampleTable_filter" class="dataTables_filter">
+                            <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
-                                @*//Phần render từng dòng trong C#*@
-                                <thead>
-                                    <tr role="row">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="STT: activate to sort column ascending" style="width: 50px;">STT</th>
-                                        <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã công nợ: activate to sort column ascending" style="width: 150px;">Mã Công nợ</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 160px;">Tên đại lý</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Loại: activate to sort column ascending" style="width: 160px;">Loại đại lý</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng nợ: activate to sort column ascending" style="width: 124px;">Tổng nợ</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 101px;">Ngày lập</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 124px;">Ngày thu</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 110px;">Chức năng</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr role="row" class="odd">
-                                        <td>01</td>
-                                        <td>CN01</td>
-                                        <td>Diễm Khang</td>
-                                        <td>Đại lý loại 2</td>
-                                        <td>10.000.000</td>
-                                        <td>19/11/2022</td>
-                                        <td></td>
-                                        <td class="table-td-center">
-                                            <button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
-                                                    onclick="myFunction(this)">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </button>
-                                            <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
-                                                    data-toggle="modal" data-target="#ModalUP">
-                                                <i class="fas fa-edit"></i>
-                                            </button>
-                                        </td>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                            @*//Phần render từng dòng trong C#*@
+                            <thead>
+                                <tr role="row">
+                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã công nợ: activate to sort column ascending" style="width: 150px;">Mã Công nợ</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 160px;">Tên đại lý</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Loại: activate to sort column ascending" style="width: 160px;">Loại đại lý</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng nợ: activate to sort column ascending" style="width: 124px;">Tổng nợ</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Hạn trả: activate to sort column ascending" style="width: 124px;">Hạn trả</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tình trạng: activate to sort column ascending" style="width: 124px;">Tình trạng</th>
+                                    <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 110px;">Chức năng</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                               
+                            </tbody>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaCongNo)
+                                    </td>
+                                    <td>
+                                        @{var tendl = db.DaiLies.Find(item.MaDL);
+                                        }
+                                        @Html.DisplayFor(modelItem => tendl.TenDL)
 
-                                    </tr>
-                                
-                                        
-                                        
-                                </tbody>
-                            </table>
-                        </div>
+                                    </td>
+                                    <td>
+                                        @{var loaidly = db.DaiLies.Find(item.MaDL);
+                                        }
+                                        @Html.DisplayFor(modelItem => loaidly.MaLoaiDL)
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TienNo)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.HanTra)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TrangThai)
+                                    </td>
+                                    <td>
+                                        <a href="/KeToan/ChinhsuCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
+                                            <i class="fa fa-edit"></i>
+                                        </a>
+                                        <a href="/KeToan/XoaCN/@item.MaCongNo" class="btn btn-primary btn-sm trash">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </a>
+
+                                    </td>
+                                </tr>
+                                }
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+</div>
 
-<script>
-    function deleteRow(r) {
-        var i = r.parentNode.parentNode.rowIndex;
-        document.getElementById("myTable").deleteRow(i);
-    }
-    jQuery(function () {
-        jQuery(".trash").click(function () {
-            swal({
-                title: "Cảnh báo",
 
-                text: "Bạn có chắc chắn là muốn xóa sản phẩm?",
-                buttons: ["Hủy bỏ", "Đồng ý"],
-            })
-                .then((willDelete) => {
-                    if (willDelete) {
-                        swal("Đã xóa thành công.!", {
-
-                        });
-                    }
-                });
-        });
-    });
-    oTable = $('#sampleTable').dataTable();
-    $('#all').click(function (e) {
-        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
-        e.stopImmediatePropagation();
-    });
