--- a/Test02/Views/QTV/Layout/LayoutQTV.cshtml
+++ b/Test02/Views/QTV/Layout/LayoutQTV.cshtml
@@ -41,90 +41,63 @@
             <img class="app-sidebar__user-avatar" src="~/Content/Img/account.png" width="50px"
                  alt="User Image">
             <div>
-                
-                <p class="app-sidebar__user-name"><b>@{
-                            var user = (Test02.Models.NhanVien)HttpContext.Current.Session["user"];
-                            @user.TenNV}</b></p>
-                <p class="app-sidebar__user-designation">Chào mừng bạn trở lại</p>
-            </div>
-        </div>
-        <hr>
-        <ul class="app-menu">
-            <li>
-                <a class="app-menu__item haha" href="#">
-                    <i class='app-menu__icon bx bx-cart-alt'></i>
-                    <span class="">PHÒNG KẾ TOÁN</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item @ViewBag.homekt" href="~/KeToan/TrangChuKeToan">
-                    <i class='app-menu__icon bx bx-tachometer'></i>
-                    <span class="app-menu__label">Trang chủ</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item @ViewBag.qldonhangkt" href="~/KeToan/QlyDonHangKeToan">
-                    <i class='app-menu__icon bx bx-tachometer'></i>
-                    <span class="app-menu__label">Danh sách đơn hàng</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item  @ViewBag.qlhd" href="~/KeToan/QLHoaDon">
-                    <i class='app-menu__icon bx bx-id-card'></i> <span class="app-menu__label">Danh sách hóa đơn</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item @ViewBag.dsdl" href="~/KeToan/DSDaiLy">
-                    <i class='app-menu__icon bx bx-dollar'></i><span class="app-menu__label">Danh sách Đại lý</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item @ViewBag.cn" href="~/KeToan/QLCongno">
-                    <i class='app-menu__icon bx bx-dollar'></i><span class="app-menu__label">Quản lý Công nợ</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item @ViewBag.dthu" href="~/KeToan/Doanhthu">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Doanh thu</span>
-                </a>
-            </li>
-            @*<li>
-            <a class="app-menu__item @ViewBag.ln" href="~/KeToan/LoiNhuan">
-                <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Lợi Nhuận</span>
-            </a>
-        </li>*@
 
-        </ul>
-    </aside>
-    <main class="app-content">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="app-title">
-                    <ul class="app-breadcrumb breadcrumb">
-                        <li class="breadcrumb-item"><a href="#"><b>@ViewBag.nd</b></a></li>
-                    </ul>
-                    <div id="clock"></div>
-                </div>
+                <p class="app-sidebar__user-name">
+                    <b>
+                        @{
+                            var user = (Test02.Models.NhanVien)HttpContext.Current.Session["user"];
+                            @user.TenNV}
+                </b>
+            </p>
+            <p class="app-sidebar__user-designation">Chào mừng bạn trở lại</p>
+        </div>
+    </div>
+    <hr>
+    <ul class="app-menu">
+        <li>
+            <a class="app-menu__item haha" href="#">
+                <i class='app-menu__icon bx bx-cart-alt'></i>
+                <span class="">QUẢN TRỊ VIÊN </span>
+            </a>
+        </li>
+        <li>
+            <a class="app-menu__item @ViewBag.qtnv" href="~/QTV/QLNhanvien">
+                <i class='app-menu__icon bx bx-tachometer'></i>
+                <span class="app-menu__label">Quản lý nhân viên</span>
+            </a>
+        </li>
+        
+    </ul>
+</aside>
+<main class="app-content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="app-title">
+                <ul class="app-breadcrumb breadcrumb">
+                    <li class="breadcrumb-item"><a href="#"><b>@ViewBag.nd</b></a></li>
+                </ul>
+                <div id="clock"></div>
             </div>
         </div>
-        <div>
-            @RenderBody()
-        </div>
-    </main>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/popper.min.js"></script>
-    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/main.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/plugins/pace.min.js"></script>
-    <!--===============================================================================================-->
-    <script type="text/javascript" src="js/plugins/chart.js"></script>
-    <!--===============================================================================================-->
-    <script type="text/javascript">
+    </div>
+    <div>
+        @RenderBody()
+    </div>
+</main>
+<script src="js/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+<script src="js/popper.min.js"></script>
+<script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
+<!--===============================================================================================-->
+<script src="js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+<script src="js/main.js"></script>
+<!--===============================================================================================-->
+<script src="js/plugins/pace.min.js"></script>
+<!--===============================================================================================-->
+<script type="text/javascript" src="js/plugins/chart.js"></script>
+<!--===============================================================================================-->
+<script type="text/javascript">
         var data = {
             labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6"],
             datasets: [{
@@ -154,8 +127,8 @@
 
         var ctxb = $("#barChartDemo").get(0).getContext("2d");
         var barChart = new Chart(ctxb).Bar(data);
-    </script>
-    <script type="text/javascript">
+</script>
+<script type="text/javascript">
         //Thời Gian
         function time() {
             var today = new Date();
@@ -196,6 +169,6 @@
                 return i;
             }
         }
-    </script>
+</script>
 </body>
 </html>
